# context-budget-optimizer

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
data/: eval_queries.json
data/corpus/: board_meeting_notes_june_2025.md  board_meeting_notes_march_2025.md  customer_success_churn_analysis.md  customer_success_enterprise_case_study.md  customer_success_onboarding_playbook.md  engineering_api_design_guidelines.md  engineering_architecture_overview.md  engineering_cicd_pipeline.md  engineering_data_model.md  engineering_database_migration_plan.md  engineering_embedding_model_evaluation.md  engineering_incident_postmortem_aug2025.md  engineering_oncall_runbook.md  engineering_testing_strategy.md  finance_budget_2025.md  finance_q2_2025_report.md  finance_q3_2025_report.md  hr_compensation_bands.md  hr_parental_leave_policy.md  hr_performance_review_process.md  hr_remote_work_policy.md  legal_data_processing_agreement.md  legal_employee_nda.md  marketing_brand_guidelines.md  marketing_content_calendar_q4.md  onboarding_guide_engineering.md  product_analytics_requirements.md  product_competitive_analysis.md  product_context_budget_api_spec.md  product_permissions_design.md  product_roadmap_h2_2025.md  product_user_research_findings.md  sales_enterprise_playbook.md  sales_pricing_strategy.md  sales_q3_pipeline_review.md  security_incident_response.md  security_soc2_compliance.md
eval/: run_eval.py
src/: chunker.py  embedder.py  evaluator.py  llm_client.py  optimizer.py  retriever.py  token_counter.py  types.py
tests/: test_strategies.py
(+7 files in other folders)
